// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cloneStarterTheme works as expected 1`] = `
Array [
  Array [
    "/path/to/project/package.json",
    Object {
      "encoding": "utf8",
    },
  ],
]
`;

exports[`cloneStarterTheme works as expected 2`] = `
Array [
  Array [
    "/path/to/project/packages/mars-theme",
  ],
]
`;

exports[`cloneStarterTheme works as expected 3`] = `
Array [
  Array [
    "@frontity/mars-theme",
  ],
]
`;

exports[`cloneStarterTheme works as expected 4`] = `
Array [
  Array [
    "npm pack @frontity/mars-theme",
    Object {
      "cwd": "/path/to/project/packages/mars-theme",
    },
    [Function],
  ],
]
`;

exports[`cloneStarterTheme works as expected 5`] = `
Array [
  Array [
    "/path/to/project/packages/mars-theme",
  ],
]
`;

exports[`cloneStarterTheme works as expected 6`] = `
Array [
  Array [
    Object {
      "cwd": "/path/to/project/packages/mars-theme",
      "file": "/path/to/project/packages/mars-theme/file.tgz",
      "strip": 1,
    },
  ],
]
`;

exports[`cloneStarterTheme works as expected 7`] = `
Array [
  Array [
    "/path/to/project/packages/mars-theme/file.tgz",
  ],
]
`;

exports[`createFrontitySettings works when extension is \`js\` 1`] = `
Array [
  Array [
    "/path/to/project/frontity.settings.js",
    "{
  \\"name\\": \\"random-name\\",
  \\"packages\\": [
    \\"frontity\\",
    \\"@frontity/file-settings\\"
  ]
}",
  ],
]
`;

exports[`createFrontitySettings works when extension is \`ts\` 1`] = `
Array [
  Array [
    "/path/to/project/frontity.settings.ts",
    "{
  \\"name\\": \\"random-name\\",
  \\"packages\\": [
    \\"frontity\\",
    \\"@frontity/file-settings\\"
  ]
}",
  ],
]
`;

exports[`createPackageJson works with a theme like "@frontity/mars-theme" 1`] = `
Array [
  Array [
    "https://registry.npmjs.com/frontity",
  ],
  Array [
    "https://registry.npmjs.com/@frontity/wp-source",
  ],
]
`;

exports[`createPackageJson works with a theme like "@frontity/mars-theme" 2`] = `
Array [
  Array [
    "/path/to/project/package.json",
    "{
  \\"name\\": \\"random-name\\",
  \\"version\\": \\"0.1.0\\",
  \\"description\\": \\"Frontity project\\",
  \\"keywords\\": [
    \\"frontity\\"
  ],
  \\"scripts\\": {
    \\"dev\\": \\"frontity dev\\",
    \\"build\\": \\"frontity build\\",
    \\"serve\\": \\"frontity serve\\"
  },
  \\"dependencies\\": {
    \\"frontity\\": \\"^1.0.0\\",
    \\"@frontity/wp-source\\": \\"^0.1.1\\",
    \\"@frontity/mars-theme\\": \\"./packages/mars-theme\\"
  }
}
",
  ],
]
`;

exports[`createPackageJson works with a theme like "mars-theme" 1`] = `
Array [
  Array [
    "https://registry.npmjs.com/frontity",
  ],
  Array [
    "https://registry.npmjs.com/@frontity/wp-source",
  ],
]
`;

exports[`createPackageJson works with a theme like "mars-theme" 2`] = `
Array [
  Array [
    "/path/to/project/package.json",
    "{
  \\"name\\": \\"random-name\\",
  \\"version\\": \\"0.1.0\\",
  \\"description\\": \\"Frontity project\\",
  \\"keywords\\": [
    \\"frontity\\"
  ],
  \\"scripts\\": {
    \\"dev\\": \\"frontity dev\\",
    \\"build\\": \\"frontity build\\",
    \\"serve\\": \\"frontity serve\\"
  },
  \\"dependencies\\": {
    \\"frontity\\": \\"^1.0.0\\",
    \\"@frontity/wp-source\\": \\"^0.1.1\\",
    \\"random-theme\\": \\"./packages/random-theme\\"
  }
}
",
  ],
]
`;

exports[`downloadFavicon works as expected 1`] = `
Array [
  Array [
    "https://faviconfrontityorg-orballo.frontity.now.sh/",
  ],
]
`;

exports[`downloadFavicon works as expected 2`] = `
Array [
  Array [
    "/path/to/project/favicon.ico",
  ],
]
`;

exports[`ensureProjectDir works when passing a non existent path 1`] = `
Array [
  Array [
    "/path/to/project",
  ],
]
`;

exports[`ensureProjectDir works when passing a non existent path 2`] = `
Array [
  Array [
    "/path/to/project",
  ],
]
`;

exports[`ensureProjectDir works when passing an existent path with an empty repo 1`] = `
Array [
  Array [
    "/path/to/project",
  ],
]
`;

exports[`ensureProjectDir works when passing an existent path with an empty repo 2`] = `
Array [
  Array [
    "/path/to/project",
  ],
]
`;

exports[`installDependencies works as expected 1`] = `
Array [
  Array [
    "npm install",
    Object {
      "cwd": "/path/to/project",
    },
    [Function],
  ],
]
`;

exports[`revertProgress works if the project directory didn't exist 1`] = `
Array [
  Array [
    "/path/to/project",
  ],
]
`;

exports[`revertProgress works if the project directory existed 1`] = `
Array [
  Array [
    "/path/to/project",
  ],
]
`;

exports[`revertProgress works if the project directory existed 2`] = `
Array [
  Array [
    "/path/to/project/frontity.settings.js",
  ],
  Array [
    "/path/to/project/package.json",
  ],
  Array [
    "/path/to/project/packages",
  ],
  Array [
    "/path/to/project/favicon.ico",
  ],
  Array [
    "/path/to/project/node_modules",
  ],
  Array [
    "/path/to/project/package-lock.json",
  ],
]
`;
